Add Entity interface as a base interface for all domain classes, change generic type of BaseDao interface
Refactoring: rename BaseDao interface to Dao, remove second generic type from Dao interface

Refactoring: replace all storage methods from AbstractDao class to Storage class, realize Dao interface methods in AbstractDao class

Add methods for searching by condition to service classes, replace the method of generating the username to UsernameHelper class

Refactoring: remove methods 'findAll' from service and DAO classes, replace searching by condition from AbstractDao to Storage class

Add CustomStorageBeanPostProcessor, replace logic of initializing and destroing of Storage bean to CustomStorageBeanPostProcessor. Refactoring: remove redundant methods from service and DAO classes