@@ -12,12 +12,12 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDateTime;
+import java.util.Collection;
 import java.util.Collections;
-import java.util.List;
+import java.util.function.Predicate;
 
 import static java.time.Duration.ofHours;
 import static org.assertj.core.api.AssertionsForInterfaceTypes.assertThat;
-import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.*;
 
@@ -36,17 +36,17 @@ class TrainingDaoImplTest {
         var training = createTestTraining();
         training.setId(1L);
 
-        given(storage.get(anyString())).willReturn(training);
+        given(storage.retrieveById(anyLong(), any())).willReturn(training);
 
         // when
-        var actualResult = trainingDao.findById(1L);
+        var actualResult = trainingDao.findById(1L, Training.class);
 
         // then
         assertThat(actualResult).isNotNull();
         assertThat(actualResult).isPresent();
         assertThat(actualResult).contains(training);
 
-        verify(storage, times(1)).get(anyString());
+        verify(storage, times(1)).retrieveById(anyLong(), any());
         verifyNoMoreInteractions(storage);
     }
 
@@ -54,56 +54,16 @@ class TrainingDaoImplTest {
     @DisplayName("Test of the method findById - should return empty optional when training with given id does not exist")
     void testFindById_negative() {
         // given
-        given(storage.get(anyString())).willReturn(null);
+        given(storage.retrieveById(anyLong(), any())).willReturn(null);
 
         // when
-        var actualResult = trainingDao.findById(1L);
+        var actualResult = trainingDao.findById(1L, Training.class);
 
         // then
         assertThat(actualResult).isNotNull();
         assertThat(actualResult).isEmpty();
 
-        verify(storage, times(1)).get(anyString());
-        verifyNoMoreInteractions(storage);
-    }
-
-    @Test
-    @DisplayName("Test of the method findAll - should return list of all trainings")
-    void testFindAll_positive() {
-        // given
-        var training1 = createTestTraining();
-        var training2 = createTestTraining();
-        training1.setId(1L);
-        training2.setId(2L);
-
-        given(storage.values()).willReturn(List.of(training1, training2));
-
-        // when
-        var actualResult = trainingDao.findAll();
-
-        // then
-        assertThat(actualResult).isNotNull();
-        assertThat(actualResult).hasSize(2);
-        assertThat(actualResult).contains(training1, training2);
-
-        verify(storage, times(1)).values();
-        verifyNoMoreInteractions(storage);
-    }
-
-    @Test
-    @DisplayName("Test of the method findAll - should return empty list when no trainings exist")
-    void testFindAll_negative() {
-        // given
-        given(storage.values()).willReturn(Collections.emptyList());
-
-        // when
-        var actualResult = trainingDao.findAll();
-
-        // then
-        assertThat(actualResult).isNotNull();
-        assertThat(actualResult).isEmpty();
-
-        verify(storage, times(1)).values();
+        verify(storage, times(1)).retrieveById(anyLong(), any());
         verifyNoMoreInteractions(storage);
     }
 
@@ -112,8 +72,9 @@ class TrainingDaoImplTest {
     void testSave() {
         // given
         var training = createTestTraining();
+        training.setId(1L);
 
-        given(storage.keySet()).willReturn(Collections.emptySet());
+        doNothing().when(storage).store(any(Training.class));
 
         // when
         var actualResult = trainingDao.save(training);
@@ -123,8 +84,7 @@ class TrainingDaoImplTest {
         assertThat(actualResult.getId()).isEqualTo(1);
         assertThat(actualResult).isEqualTo(training);
 
-        verify(storage, times(1)).keySet();
-        verify(storage, times(1)).put(anyString(), any(Training.class));
+        verify(storage, times(1)).store(any(Training.class));
         verifyNoMoreInteractions(storage);
     }
 
@@ -136,7 +96,7 @@ class TrainingDaoImplTest {
         training.setId(1L);
         training.setTrainingType(TrainingType.YOGA);
 
-        doNothing().when(storage).put(anyString(), any(Training.class));
+        doNothing().when(storage).update(any(Training.class));
 
         // when
         var actualResult = trainingDao.update(training);
@@ -145,7 +105,7 @@ class TrainingDaoImplTest {
         assertThat(actualResult).isNotNull();
         assertThat(actualResult).isEqualTo(training);
 
-        verify(storage, times(1)).put(anyString(), any(Training.class));
+        verify(storage, times(1)).update(any(Training.class));
         verifyNoMoreInteractions(storage);
     }
 
@@ -156,51 +116,51 @@ class TrainingDaoImplTest {
         var training = createTestTraining();
         training.setId(1L);
 
-        doNothing().when(storage).remove(anyString());
+        doNothing().when(storage).remove(any(Training.class));
 
         // when
         trainingDao.delete(training);
 
         // then
-        verify(storage, times(1)).remove(anyString());
+        verify(storage, times(1)).remove(any(Training.class));
         verifyNoMoreInteractions(storage);
     }
 
     @Test
-    @DisplayName("Test of the method findByTrainingName - should return training when training with given name exists")
-    void testFindByTrainingName_positive() {
+    @DisplayName("Test of the method findByCondition - should return collection of trainings that satisfy condition")
+    void testFindByCondition_positive() {
         // given
         var training = createTestTraining();
         training.setId(1L);
 
-        given(storage.values()).willReturn(List.of(training));
+        given(storage.retrieveByCondition(any(Predicate.class), any(Class.class))).willReturn(Collections.singletonList(training));
 
         // when
-        var actualResult = trainingDao.findByTrainingName("Test Training");
+        var actualResult = trainingDao.findByCondition(t -> "Test Training".equals(t.getTrainingName()), Training.class);
 
         // then
         assertThat(actualResult).isNotNull();
-        assertThat(actualResult).isPresent();
+        assertThat(actualResult).isInstanceOf(Collection.class);
         assertThat(actualResult).contains(training);
 
-        verify(storage, times(1)).values();
+        verify(storage, times(1)).retrieveByCondition(any(Predicate.class), any(Class.class));
         verifyNoMoreInteractions(storage);
     }
 
     @Test
-    @DisplayName("Test of the method findByTrainingName - should return empty optional when training with given name does not exist")
-    void testFindByTrainingName_negative() {
+    @DisplayName("Test of the method findByCondition - should return empty collection if there are no trainings that satisfy condition")
+    void testFindByConditions_negative() {
         // given
-        given(storage.values()).willReturn(Collections.emptyList());
+        given(storage.retrieveByCondition(any(Predicate.class), any(Class.class))).willReturn(Collections.emptyList());
 
         // when
-        var actualResult = trainingDao.findByTrainingName("Test Training");
+        var actualResult = trainingDao.findByCondition(t -> "Test Training".equals(t.getTrainingName()), Training.class);
 
         // then
         assertThat(actualResult).isNotNull();
         assertThat(actualResult).isEmpty();
 
-        verify(storage, times(1)).values();
+        verify(storage, times(1)).retrieveByCondition(any(Predicate.class), any(Class.class));
         verifyNoMoreInteractions(storage);
     }
 
